# trash_htmx_rust_chat

./: Cargo.toml
src/: main.rs
src/handlers/: pages.rs  ws.rs
templates/: base.html  chat.html  index.html  message.html
