[package]
name = "htmx-chat"
version = "0.1.0"
edition = "2021"

[profile.dev.package.askama_derive]
opt-level = 3

[dependencies]
anyhow = "1.0.81"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-session = "3.0.0"
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink", "std"], default-features = false }
http = "1.1.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs","trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
